fix code smells (#1781)
* fix code smells

* checkstyle